# geoclue

./: Makefile.am  NEWS  autogen.sh  configure.ac  meson.build  meson_options.txt
data/: geoclue.conf.in  org.freedesktop.GeoClue2.Agent.conf.in
demo/: Makefile.am  gclue-service-agent.c  where-am-i.c
docs/lib/: Makefile.am  libgeoclue-docs.xml  libgeoclue-sections.txt
libgeoclue/: Makefile.am  gclue-enum-types.c  gclue-enum-types.h  gclue-enums.h  gclue-helpers.c  gclue-helpers.h  gclue-simple.c  geoclue.h
src/: Makefile.am  gclue-compass.c  gclue-config.c  gclue-location-source.c  gclue-location.c  gclue-location.h  gclue-locator.c  gclue-modem-gps.c  gclue-modem-manager.c  gclue-nmea-source.c  gclue-service-client.c  gclue-service-location.c  gclue-web-source.c  meson.build  org.freedesktop.GeoClue2.Client.xml
src/agent/: org.freedesktop.GeoClue2.Agent.xml
src/geocode-glib/: geocode-location.c
