option('enable-libgeoclue',
        type: 'boolean', value: true,
        description: 'Enable convenience library')
option('enable-gtk-doc',
       type: 'boolean', value: true,
       description: 'Whether to generate the API reference for Geocode-GLib')
option('enable-3g-source',
       type: 'boolean', value: true,
       description: 'Enable 3G source (requires ModemManager')
option('enable-cdma-source',
       type: 'boolean', value: true,
       description: 'Enable CDMA source (requires ModemManager')
option('enable-modem-gps-source',
       type: 'boolean', value: true,
       description: 'Enable modem GPS source (requires ModemManager')
option('enable-nmea-source',
       type: 'boolean', value: true,
       description: 'Enable network NMEA source (requires Avahi libraries)')
option('enable-backend',
       type: 'boolean', value: true,
       description: 'Enable backend (the geoclue service)')
option('enable-demo-agent',
       type: 'boolean', value: false,
       description: 'Build demo agent')
option('enable-debug',
       type: 'boolean', value: false,
       description: 'Build debug build')
option('dbus-sys-dir',
       type: 'string',
       description: 'where D-BUS system.d directory is')
option('systemd-system-unit-dir',
       type: 'string',
       description: 'Directory for systemd service files')
option('dbus-service-user',
       type: 'string', value: 'root',
       description: 'The user (existing) as which the service will run')
